--- a/PyTut2.1_Types.ipynb
+++ b/PyTut2.1_Types.ipynb
@@ -17,88 +17,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1. Select the cell below and type Esc => h (for help)\n",
-    "2. Then type Esc => a (for insert **above**)\n",
-    "3. Then type Esc => b (for insert **below**)\n",
-    "3. Type &lt;enter&gt; followed by:\n",
-    "\n",
-    "> print('Hello world')  &lt;shift enter&gt;\n",
-    "\n",
-    "\n",
-    "4. Then type Esc => m (to change cell type to markdown instead of code)\n",
-    "5. In the Markdown cell type &lt;enter&gt; (to go into edit mode) followed by \"#\" &lt;space&gt; &lt;Your name&gt; and press &lt;shift&gt; + &lt;enter&gt;\n",
-    "6. Select the previous cells and type Esc => dd (to delete them)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -119,47 +37,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Markdown details available at: https://www.markdownguide.org/basic-syntax/\n",
+    "#### Double click this cell to see the format of the markdown text before it is rendered.\n",
+    "#### Then `<shift> + <enter>` to render again. \n",
     "\n",
-    "Basic Examples:\n",
-    "```\n",
-    "# Heading1, ## Heading 2, ### Heading3\n",
-    "*italics*, **bold**\n",
-    "* bullets, 1. numbered list\n",
-    "Surround `phrases with backticks` to display explicitly\n",
-    "```\n",
-    "> Note: to start new paragraphs leave a blank line.\n",
+    "Headings can be set to different levels using `#(space)` before the text:\n",
+    "`# Heading1, ## Heading2, ### Heading3`:\n",
     "\n",
-    "### Exercise: Play around and try the above out in a new blank markup cell below:"
+    "# Heading1\n",
+    "## Heading2\n",
+    "### Heading3\n",
+    "\n",
+    "A horizontal line is inserted with three hyphens `\"---\"` alone on it's own line:\n",
+    "\n",
+    "---\n",
+    "```\n",
+    "*italics*, **bold**:\n",
+    "```\n",
+    "> *italics*, **bold**\n",
+    "\n",
+    "```\n",
+    "* Bullet points (unordered lists)\n",
+    "* Are rendered by prefixing with \"*+-\" \n",
+    "* They are auto indented depending on position\n",
+    "    - So can be indented to \n",
+    "        - different levels\n",
+    "* You can also render ordered lists:\n",
+    "1. One\n",
+    "1. Two\n",
+    "1. Three\n",
+    "```\n",
+    "> * Bullet points (unordered lists)\n",
+    "> * Are rendered by prefixing with \"*+-\" \n",
+    "> * They are auto indented depending on position\n",
+    ">     - So can be indented to \n",
+    ">         - different levels\n",
+    "> * You can also render ordered lists:\n",
+    "> 1. One\n",
+    "> 1. Two\n",
+    "> 1. Three\n",
+    "\n",
+    "Surround text with backticks to display explicitly:\n",
+    "> \\``< render explicitly >`\\`\n",
+    "\n",
+    "To start new paragraphs leave a blank line.\n",
+    "\n",
+    "And to break a line put two spaces  \n",
+    "on the end  \n",
+    "\n",
+    "## Exercise: Set one of the cells below to markup and try each of these examples above.\n",
+    "Note: Markdown details available at: https://www.markdownguide.org/basic-syntax/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -234,7 +161,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start here by executing each cell with &lt;shift&gt; + &lt;enter&gt; "
+    "# Jupyter notebook orientation\n",
+    "## Start here by executing each cell with &lt;shift&gt; + &lt;enter&gt; "
    ]
   },
   {
@@ -243,9 +171,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hello world is just one line of code\n",
+    "# The python Hello world is just one line of code\n",
     "# print() outputs data to the screen\n",
-    "print(\"Hello World\")"
+    "print(\"Hello World\")\n",
+    "# Notice the number increment within the \"In[x]\"\n",
+    "# Execute this cell a few times and watch the kernel busy indicator at the top right"
    ]
   },
   {
@@ -254,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note book cells will output or \"render\" the last expression\n",
+    "# Note book cells will output or \"render\" the last expression prefixed with \"Out[x]:\"\n",
+    "# Run this a few times to see the \"In\" & \"Out\" increment.\n",
     "1\n",
     "2\n",
     "3\n",
@@ -267,8 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1+2\n",
-    "3+4"
+    "1+2   # <- This is executed but nothing is output and the result is not stored\n",
+    "3+4   # <- This will be rendered"
    ]
   },
   {
@@ -277,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(1+2)\n",
+    "print(1+2)   # <- This time we print out the result\n",
     "3+4"
    ]
   },
@@ -294,25 +225,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Some stdio operation also work in the Jupyter notebook.\n",
+    "# Some stdio operations also render in the Jupyter notebook.\n",
     "# However, it can also tie up the console which case you can interrupt using kernel menu or the stop button.\n",
-    "x = input('What is your name? ')\n",
-    "print('Ow do ' + x + '!')"
+    "# Again watch the kernel indicator top right while executing this cell\n",
+    "name = input('What is your name? ')\n",
+    "print('Ow do ' + name + '!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -330,7 +248,9 @@
     "# This is a single line comment\n",
     "'''\n",
     "This is a multi-line comment\n",
-    "over two lines but can also be accessed in an object as a \"DocString\"\n",
+    "over two lines but can also be accessed as an object attribute\n",
+    "It is known as a \"DocString\" and is used to provide docuementation \n",
+    "and lookup capabilities.\n",
     "'''\n",
     "print('Bananas!')  # Code lines can be commented from the # onwards"
    ]
@@ -344,6 +264,7 @@
     "def myfunction():   # Don't worry about function definitions for now\n",
     "    \"\"\"\n",
     "    The convention is to use double quotes for docstrings\n",
+    "    But you could also use single quotes: ```\n",
     "    \"\"\"\n",
     "    pass"
    ]
@@ -362,14 +283,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Typically the docstring will describe the function:\n",
+    "range?"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Also try pressing <shift> + <tab> with your cursor at the end of the enumerate:\n",
+    "enumerate"
+   ]
   },
   {
    "cell_type": "code",
@@ -383,12 +310,12 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
     "1. In a cell below, get an input (suggestion, favorite color).\n",
     "2. Print the answer\n",
-    "3. In final line without using print output the sum of 13 * 77\n",
-    "4. Add some comments to your code\n",
-    "\n",
-    " - Copy & paste your code into the chat"
+    "3. In final line without using print output the sum of 13 x 77\n",
+    "4. Add some single line and multiline comments to your code\n",
+    "* Copy & paste your code into the chat once complete"
    ]
   },
   {
@@ -396,7 +323,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -515,7 +471,7 @@
    "outputs": [],
    "source": [
     "# When this is executed there is no copy you have just created a new symbol \"n\".\n",
-    "#  \"n\" is now pointing to the same object \"666\" that was created and assigned to \"i\"\n",
+    "#  \"n\" is now pointing to the same int object \"666\" that was created and assigned to \"i\"\n",
     "n = i\n",
     "print(i, n)\n",
     "print(i == n)\n",
@@ -537,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 42 # Now a new \"42\" object is created and symbol \"n\" is pointing to the new object\n",
+    "n = 42 # Now a new int object \"42\" is created and symbol \"n\" is pointing to the new object\n",
     "print(i, n)\n",
     "print(i == n)\n",
     "print(i is n)\n",
@@ -559,13 +515,13 @@
    "outputs": [],
    "source": [
     "n = i\n",
-    "print(id(i))\n",
-    "print(id(n))\n",
+    "print(hex(id(i)))\n",
+    "print(hex(id(n)))\n",
     "n += 4\n",
     "print(i)\n",
     "print(n)\n",
-    "print(id(i))\n",
-    "print(id(n))"
+    "print(hex(id(i)))\n",
+    "print(hex(id(n)))"
    ]
   },
   {
@@ -598,9 +554,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Strings:\n",
     "name = \"Fred\"  # All these lines are equivilant\n",
     "name = 'Fred'\n",
-    "name = 'Fr' \"ed\"\n",
+    "name = 'Fr' \"ed\"  # Auto concatenated (not used often)\n",
     "print(name)"
    ]
   },
@@ -610,8 +567,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name + ' Blogs\\n' * 5"
+    "name + ' Blogs\\n' * 5 # Yes you can multiple strings"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(name + ' Blogs\\n' * 5)   # Printed instead of evaluated so that the \\n gets rendered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can also assign variables in loops:\n",
+    "greeting = 'Hello World'   # The string is assigned to the greeting variable\n",
+    "for char in greeting:      # We loop through the string assigning each character to variable char\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -632,7 +631,7 @@
    "metadata": {},
    "source": [
     "* There are 6 main data types Boolean, Numeric, Strings, List, Tuple, Dictionary\n",
-    "* You can store any of them in the same variable"
+    "* You can store any of them in the same variable because Python is dynamically typed"
    ]
   },
   {
@@ -643,12 +642,100 @@
    "source": [
     "name = True   # Boolean\n",
     "name = 15     # Integer\n",
+    "name = 1.234  # float\n",
     "name = 'Burt' # String\n",
     "# At this point it is likely that \"15\" and the \"True\" above still exist. \n",
     "# But they are not accessable because no symbol is pointing to the object.\n",
     "# \"Garbage collection\" runs intermittently reclaiming such orphaned object space\"\n",
     "print(name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There are also binary strings:\n",
+    "string_from_file = b'abcdefghi'\n",
+    "string_from_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of a list:\n",
+    "fruits = [ 'apple', 'orange', 'pear' ]\n",
+    "print(fruits)\n",
+    "fruits[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of a tuple:\n",
+    "primes = (1 , 3, 5, 7, 9)\n",
+    "print(primes)\n",
+    "primes[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of a dictionary:\n",
+    "num2words = { 1: 'one', 2:'two', 3:'three' }\n",
+    "print(num2words[2])\n",
+    "num2words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another example of a dictionary:\n",
+    "word2nums = { 'one': 1, 'two': 2, 'three': 3 }\n",
+    "print(word2nums['three'])\n",
+    "word2nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -701,7 +788,7 @@
     "f = 4.2\n",
     "f2 = 7.\n",
     "mypi = 3.141593\n",
-    "print('%.3f' % mypi)  # Using print formatter to round the float"
+    "print('%.3f' % mypi)  # Using a 'C' type print formatter to round the float"
    ]
   },
   {
@@ -795,7 +882,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most Python platforms represet *float* values as 64-bit double precision.  Approximately 1.8 x 10<sup>308</sup>.<br>\n",
+    "Most Python platforms represent *float* values as 64-bit double precision.  Approximately 1.8 x 10<sup>308</sup>.<br>\n",
     "The closest a nonzero number can be to zero is approximately 5.0 ⨉ 10<sup>-324</sup>.\n",
     "\n",
     "Floating point numbers are represented internally as binary (base-2) fractions. Most decimal fractions cannot be represented exactly as binary fractions, so in most cases the internal representation of a floating-point number is an approximation of the actual value. In practice, the difference between the actual value and the represented value is very small and should not usually cause significant problems."
@@ -944,13 +1031,13 @@
     "# The arithmetic operators +, -, *, /, %, **, //\n",
     "# ** Exponential calculation\n",
     "# // Floor Division\n",
-    "print(\"5 + 2 =\", 5+2)\n",
-    "print(\"5 - 2 =\", 5-2)\n",
-    "print(\"5 * 2 =\", 5*2)\n",
-    "print(\"5 / 2 =\", 5/2)\n",
-    "print(\"5 % 2 =\", 5%2)\n",
-    "print(\"5 ** 3 =\", 5**3) # or \n",
-    "print(\"5 // 2 =\", 5//2)"
+    "print(\"5 + 2 =\", 5 + 2)\n",
+    "print(\"5 - 2 =\", 5 - 2)\n",
+    "print(\"5 * 2 =\", 5 * 2)\n",
+    "print(\"5 / 2 =\", 5 /  2)\n",
+    "print(\"5 % 2 =\", 5 % 2)\n",
+    "print(\"5 ** 3 =\", 5 ** 3) # or \n",
+    "print(\"5 // 2 =\", 5 // 2)"
    ]
   },
   {
@@ -1092,7 +1179,6 @@
    "outputs": [],
    "source": [
     "# By default strings are unicode\n",
-    "\n",
     "s1 = 'this is a test string' # this is a string type, and since 3.3 you can also explicitly prefix with a 'u'\n",
     "s2 = b'this is a test string'  # this is a bytes type and can only contain ascii characters\n",
     "print('s1 type =', type(s1))\n",
@@ -1375,14 +1461,74 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
     "1. Create four variables, an integer, a float to 3 decimal places and two strings.\n",
     "1. Create a composite string of the two strings.\n",
-    "1. Print out (or make final expression) a line with the numbers and the composite.\n",
+    "1. Print out (or make final expression) a line with the numbers and the composite using formatters.\n",
     "1. Divide the integer by the float and output the answer to a precision of one decimal place\n",
     "1. Output a line of eighty '=' using as concise an expression as possible\n",
     "\n",
-    " - Comment your code and paste into the chat"
+    "* Comment your code, copy and paste into the chat"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
