--- a/PyTut2.2_Types_P2.ipynb
+++ b/PyTut2.2_Types_P2.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "# These are all lists, note a list member can be any object:\n",
     "def myfunc():\n",
-    "    pass\n",
+    "    print('Hello')\n",
     "\n",
     "list1 = [ 1, 2, 3, 4, 5, 6 ]\n",
     "list2 = [ 1, 2,\n",
@@ -72,6 +72,28 @@
     "print(list2)\n",
     "print(list3)\n",
     "print(list4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list1[0])\n",
+    "print(list2[1])\n",
+    "print(list3[3][1])\n",
+    "print(list4[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list3[4])\n",
+    "list3[4]()"
    ]
   },
   {
@@ -146,7 +168,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can put any data type in a a list including a list\n",
+    "# You can easily loop through a list:\n",
+    "for grocery in grocery_list:  # Here we assign variable grocery to each item in the list looping through:\n",
+    "    print(grocery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can put any data type in a a list including another list\n",
     "other_events = ['Wash Car', 'Pick up Kids', 'Cash Check']\n",
     "to_do_list = [other_events, grocery_list]\n",
     "to_do_list"
@@ -160,6 +207,24 @@
    "source": [
     "# Get the second item in the second list (Boxes inside of boxes)\n",
     "print(to_do_list[1][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets loop through the list of lists:\n",
+    "for x in to_do_list:\n",
+    "    print('list:', x)"
    ]
   },
   {
@@ -334,11 +399,13 @@
    "source": [
     "## Exercise:\n",
     "Executing and using the list below...\n",
+    "* Answer each question in a seperate cell\n",
     "1. Slice and print out the third number.\n",
     "1. Slice and print out the numbers 14,15,16.\n",
     "1. Change the 2nd item by adding 10 to its current value\n",
     "1. Change and double the last number.\n",
-    "1. Without using positive indexing slice and print out the numbers 17 and 18"
+    "1. Without using positive indexing slice and print out the numbers 17 and 18\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -356,35 +423,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#2\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#4\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#5\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -417,6 +494,41 @@
     "b = a\n",
     "b.append(4)\n",
     "a.append(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in map(id, a):\n",
+    "    print('Mem Address:', hex(i))"
    ]
   },
   {
@@ -667,8 +779,42 @@
    "metadata": {},
    "source": [
     "## Tuples\n",
-    "* Tuples are similar to lists but are imutable, they cannot be changed (lists are mutable).\n",
-    "* Tuples are a fixed size whereas lists are dynamic."
+    "* **Tuples are similar to lists but are immutable, they cannot be changed (lists are mutable and can be changed).**\n",
+    "* Tuples are a fixed size whereas lists are dynamic.\n",
+    "* Tuples are useful to pack and unpack sequences (collections of values).\n",
+    "* Usually you would use tuples when you know what you want to pack and how many elements.\n",
+    "* And use a list when the data you are storing is dynamic and could grow/shrink.\n",
+    "    - For example:\n",
+    "```\n",
+    "    person = ('Dave Jenkins', 'Admin', '+566634-566-712')\n",
+    "    groceries = ['bread', 'potatoes', 'milk']\n",
+    "```\n",
+    "* There are some technical differences too when used with dictionaries:\n",
+    "    - Tuples **can** be used as dictionary keys because they are immutable.\n",
+    "    - Lists **cannot** be used as dictionary keys as they are mutable & dynamic (cannot be hashed).\n",
+    "    - To use a list as a dictionary key it has to be changed to a tuple first."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = (1, 2, 'Three')   # These are\n",
+    "numbers = 1, 2, 'Three'     # equivilent\n",
+    "a, b, c = numbers   # unpacking the tuple\n",
+    "print(numbers, a, b, c, type(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b ,c = [1, 2, 3]  # You can also unpack lists\n",
+    "print(a, b, c)"
    ]
   },
   {
@@ -746,8 +892,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# tuples also have len(tuple), min(tuple) and max(tuple)"
+    "# You can have multiple dimensions to the tuple (and lists)\n",
+    "mytuple=((1,2),(3,(4,5),(6,(7,(8,9)))))\n",
+    "mytuple[1][2][1][1][0]"
    ]
   },
   {
@@ -821,6 +976,154 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# The iterable unpacking operator \"*\"\n",
+    "def myfunc():\n",
+    "    pass # do something clever\n",
+    "    return (13.567, 237.67, \"co-ords\" ,4000 ,\"bomb\")\n",
+    "\n",
+    "x, y, *junk = myfunc()\n",
+    "print(x, y, junk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, *b, c = (10, \"twenty\", 30, \"forty\", 50)\n",
+    "print('a =', a)\n",
+    "print('b =', b)\n",
+    "print('c =', c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both tuples and lists have the following common methods:  \n",
+    "```\n",
+    "len(), max(), min(), sum(), any(), all(), sorted(), index(), count()\n",
+    "```\n",
+    "List only methods:\n",
+    "```\n",
+    "append(), insert(), remove(), pop(), clear(), sort(), and reverse()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "Executing and using the list of tuples below...\n",
+    "* Answer each question in a seperate cell\n",
+    "1. Print the \"Lacky\" description to the screen using list & tuple indexing.\n",
+    "1. Loop through the users list printing each person's username, id and description.\n",
+    "1. Add your own entry to the end of the list.\n",
+    "1. Loop again but this time unpack the tuples into variables: username, id, description.  \n",
+    "    - And print them out.\n",
+    "* Copy & paste your answers into chat once completed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = [\n",
+    "    ('root', 0, 'Superman')\n",
+    "    ('dave', 121, 'Admin')\n",
+    "    ('renfield', 122, 'Lacky')\n",
+    "    ('daphne', 301, 'Engineer')\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -866,8 +1169,8 @@
     "# Create an empty set with the set keyword as {} will be interpretted as a dictionary\n",
     "d = {}\n",
     "x = set()\n",
-    "print(d)\n",
-    "print(x)\n",
+    "print(type(d))\n",
+    "print(type(x))\n",
     "x.add(1); x.add(2)\n",
     "print(x)"
    ]
@@ -935,6 +1238,42 @@
    "source": [
     "### Set operations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [1, 1, 1, 2, 2, 2, 3, 3, 3]\n",
+    "mytuple = ('alpha', 'beta', 'beta', 'charlie')\n",
+    "mystring = 'aabbbccxxxxxxyyyyyyyzzzzzz'\n",
+    "unique1 = set(mylist)   # converting from other iterables is easy\n",
+    "unique2 = set(mytuple)\n",
+    "unique3 = set(mystring)\n",
+    "print(unique1)\n",
+    "print(unique2)\n",
+    "print(unique3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in (2, 2, 2, 3, 4, 4, 5, 6):\n",
+    "    print('Adding:', i)\n",
+    "    unique1.add(i)\n",
+    "print('Result:', unique1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1103,8 +1442,10 @@
    "source": [
     "## Exercise:\n",
     "Executing and given the list and tuple alpha & beta below...\n",
+    "* Answer each question in a seperate cell\n",
     "1. Produce a set \"charlie\" by combining both alpha/beta\n",
-    "1. Produce a set \"delta\" with members only in both alpha and beta"
+    "1. Produce a set \"delta\" with members only in both alpha and beta\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -1122,14 +1463,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#2\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1163,7 +1508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A quick word on iterables"
+    "## A quick reminder about iterables"
    ]
   },
   {
@@ -1469,6 +1814,7 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
     "1. Given any odd lengthed string of > 7 characters slice out the middle three characters\n",
     " - Test with text='xxonexx' and text2='xxxxtwoxxxx'\n",
     "1. Have a look at the methods supported by strings: \n",
@@ -1479,7 +1825,8 @@
     " - Spooky, Understood, Harpoon\n",
     " - Format the output to say: I found 'oo' in \"x\" at y.y%\n",
     " - Replacing x with each word and y.y as the percentage into the word.\n",
-    " - Format the percentage to one decimal place.\n"
+    " - Format the percentage to one decimal place.\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -1495,6 +1842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Execute this cell before attempting #1\n",
     "text = 'xxonexx'\n",
     "text2 = 'xxxxtwoxxxx'"
    ]
@@ -1504,14 +1852,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#2\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1526,6 +1878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Execute this cell before attempting #3\n",
     "words = ('Spooky', 'Understood', 'Harpoon')"
    ]
   },
@@ -1534,7 +1887,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1585,9 +1940,11 @@
    "metadata": {},
    "source": [
     "## Dictionaries (maps, hashes)\n",
+    "* Hold \"items\" which are **key-value** pairs. \n",
     "* Made up of values with a unique key for each value\n",
-    "* Similar to lists, but you can't join dicts with a +\n",
-    "* Dictionary keys are not guaranteed to be ordered (but are since Python ver 3.6 compact dictionaries)"
+    "* Similar to lists except the key (list index) can be practically any value, even another object.\n",
+    "    - Note the object must have `__hash__` and `__eq__` methods to be valid for as a key\n",
+    "* Dictionary keys are not guaranteed to be ordered (but actually are since Python ver 3.6 \"compact dictionaries\")"
    ]
   },
   {
@@ -1596,7 +1953,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "empty1 = {}\n",
+    "empty2 = dict()\n",
+    "print(type(empty1), empty1, type(empty2), empty2)\n",
+    "empty2['new_entry'] = (1,2,3,4)\n",
+    "print(empty2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "super_villains = {\n",
     "    'Fiddler' : 'Isaac Bowin',\n",
     "    'Captain Cold' : 'Leonard Snart',\n",
@@ -2006,6 +2375,77 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
+    "1. Create an empty dictionary \"shapes\" and add these key value pairs:\n",
+    "```\n",
+    "line, 2\n",
+    "trangle, 3\n",
+    "square, 4\n",
+    "pentagon, 5\n",
+    "```\n",
+    "1. Print out on seperate lines the dictionary:\n",
+    "    - keys\n",
+    "    - values\n",
+    "    - keys and values (items)\n",
+    "1. Loop through your shapes dictionary printing \"Shape x has y points\" (filling in the x & y).\n",
+    "1. Create a second dictionary with:\n",
+    "```\n",
+    "hexagon, 6\n",
+    "octagon, 8\n",
+    "```\n",
+    "    - Add this new dictionary to the \"shapes\" dictionary and print the result.\n",
+    "\n",
+    "* Copy & paste your answers into chat once completed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2090,7 +2530,7 @@
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
-    "carcolors = defaultdict(int)  # provide a fuction to instantiate each new item\n",
+    "carcolors = defaultdict(int)  # provide a function to instantiate each new item\n",
     "carcolors['red']  += 10\n",
     "carcolors"
    ]
@@ -2152,9 +2592,11 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
     "1. Go to the python documentation website for collections (https://docs.python.org/3/library/collections.html) and examine the OrderedDict section.\n",
     "1. Why do you think that OrderedDict exists?\n",
-    "1. Provide an example of a dictionary counter without using collections Counter or DefaultDict?"
+    "1. Provide an example of a dictionary counter without using collections Counter or DefaultDict?\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -2162,21 +2604,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#3\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -2269,7 +2699,7 @@
    "source": [
     "# The if, else and elif statements are used to perform different\n",
     "# actions based off of conditions\n",
-    "# Comparison Operators : ==, !=, >, <, >=, <="
+    "# Comparison Operators: ==, !=, >, <, >=, <="
    ]
   },
   {
@@ -2345,7 +2775,7 @@
    "outputs": [],
    "source": [
     "# You can combine conditions with logical operators\n",
-    "# Logical Operators : and, or, not\n",
+    "# Logical Operators: and, or, not\n",
     "\n",
     "age = int(input('Age? '))\n",
     "if age >= 1 and age <= 18:\n",
@@ -2517,6 +2947,7 @@
    "metadata": {},
    "source": [
     "## Exercise:\n",
+    "* Answer each question in a seperate cell\n",
     "1. Write some code which asks for the number of wheels and maximum number of passengers (including the driver) and then guesses the vehicle type from the following:\n",
     " - Unicycle, bicycle, car, bus, train, unknown\n",
     "1. Write some code to convert inputed temperature to and from both celsius, fahrenheit.\n",
@@ -2526,7 +2957,8 @@
     " - Accept input suffixed with type, C or F, e.g. 60C\n",
     " - Expected Output :\n",
     "    - 60C is 140 in Fahrenheit\n",
-    "    - 45F is 7 in Celsius"
+    "    - 45F is 7 in Celsius\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
