--- a/PyTut3_LoopsFunctionsClasses.ipynb
+++ b/PyTut3_LoopsFunctionsClasses.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can use for loops to cycle through a list\n",
+    "# As seen previously you can use for loops to cycle through a list:\n",
     "grocery_list = ['Juice', 'Tomatoes', 'Potatoes', 'Bananas']\n",
     " \n",
     "for i in grocery_list:\n",
@@ -154,8 +154,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You can also define a list of numbers to cycle through\n",
-    "for x in [2, 4, 6, 8, 10]:\n",
+    "# And through tuples, dictionary keys etc:\n",
+    "for x in (2, 4, 6, 8, 10):\n",
+    "    if x == 6:\n",
+    "        continue\n",
     "    print(x)"
    ]
   },
@@ -176,8 +178,11 @@
     "def myfunc():\n",
     "    pass\n",
     "\n",
-    "for i in [2, 4.3, 'hello', (8,10), myfunc]:\n",
-    "    print(i)"
+    "for i in [2, 4.3, 'hello', (8, 10), myfunc]:\n",
+    "    if type(i) == str:\n",
+    "        print('There is a string in here:', i)\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -234,22 +239,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Exercise\n",
-    "1. Given the supplied colour_dict dictionary below step through it and print out each colour with it's code in a presentable format with aligned columns.\n",
-    "1. Write a Python program to find those numbers which are both divisible by 7 and multiple of 5, between 1500 and 2700 (both included)\n"
+    "names = ['Rita', 'Sue', 'Bob']\n",
+    "for i, name in enumerate(names, 11):  # using enumerate you can p[ick the starting count\n",
+    "    print(f'{i:04d}) {name}')"
    ]
   },
   {
@@ -265,10 +258,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The range function is also commonly used in loops:\n",
+    "for count in range(10):\n",
+    "    print(count, end='')\n",
+    "print()\n",
+    "for odd in range(1, 11, 2):\n",
+    "    print(odd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It is common to use range with lists and tuples:\n",
+    "boys = 'Adam', 'Brian', 'Carl'\n",
+    "for i in range(len(boys)):\n",
+    "    print(boys[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "* Answer each question in a seperate cell\n",
+    "1. Given the supplied colour_dict dictionary below step through it and print out each colour with it's code in a presentable format with aligned columns.\n",
+    "    - Hint: `f'{x:>10s}'`\n",
+    "1. Copy paste answer to #1 and modify to print an index for each colour starting at 1:\n",
+    "    - for example 3rd item outputs as: `3)   black = #000000`\n",
+    "1. Write a Python program to find those numbers which are both divisible by 7 and multiple of 5, between 1500 and 2700 (both included)\n",
+    "* Copy & paste your answers into chat once completed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 'red'\n",
+    "f'{x:>10s}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "colour_dict = {'red':'#FF0000',\n",
     "          'green':'#008000',\n",
     "          'black':'#000000',\n",
     "          'white':'#FFFFFF'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3\n"
    ]
   },
   {
@@ -293,13 +370,6 @@
    "source": [
     "# %load answers/divide75.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -439,8 +509,10 @@
    "metadata": {},
    "source": [
     "## Exercise\n",
+    "* Answer each question in a seperate cell\n",
     "1. Use the range builtin to create a list of numbers from 13 to 27 in steps of 2\n",
-    " - You might want to lookup the range parameters at: https://docs.python.org/3/library/functions.html"
+    " - You might want to lookup the range parameters at: https://docs.python.org/3/library/functions.html\n",
+    " * Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -448,7 +520,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -487,7 +561,7 @@
     "\n",
     "Below is a typical format of a list comprehension;\n",
     "\n",
-    "[(output expression) for (i in iterable) if (filter condition)]\n"
+    "`[ (output expression) for (i in iterable) if (filter condition) ]`\n"
    ]
   },
   {
@@ -516,7 +590,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = [i for i in range(10) if i % 2 == 0]\n",
+    "# Reading from middle outwards can help, the for, the filter the expression:\n",
+    "result = [ i for i in range(10) if i % 2 == 0 ]\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = [ 'odd'+str(i) for i in range(10) if i % 2 == 0 ]\n",
     "result"
    ]
   },
@@ -533,6 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The expression could be complex:\n",
     "[i ** 2 if i % 2 == 0 else i ** 3 for i in [1, 2, 3, 4, 5]]"
    ]
   },
@@ -558,7 +644,7 @@
    "source": [
     "# Flatten a list of lists\n",
     "mat = [[1,2,3,4], [5,6,7,8], [9,10,11,12], [13,14,15,16]]\n",
-    "[i for row in mat for i in row if i % 2==0]"
+    "[col for row in mat for col in row if col % 2==0]"
    ]
   },
   {
@@ -629,7 +715,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Try running the above a second time.  What happens?**"
+    "**Try running the above a second time.  What happens? Why?**"
    ]
   },
   {
@@ -830,11 +916,13 @@
    "metadata": {},
    "source": [
     "## Exercise\n",
-    "1. Explain the comprehension above?  (it is often best to read a comprehension back to front)\n",
-    "2. What rule does it break?\n",
+    "1. Explain the comprehension above?  (it is often best to read a comprehension for part first and sometimes back to front)\n",
+    "2. What is wrong with it?\n",
     "3. Create a list comprehension to generate the following on one line:\n",
-    "\n",
-    "    [ 'No.1', 'No.2', 'No.3', 'No.4', 'No.5' ]"
+    "```\n",
+    "[ 'No.1', 'No.2', 'No.3', 'No.4', 'No.5' ]\n",
+    "```\n",
+    "* Copy & paste your answers into chat once completed"
    ]
   },
   {
@@ -842,7 +930,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#3\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -918,7 +1008,7 @@
    "source": [
     "# An iterator for a while loop is defined before the loop\n",
     "i = 0;\n",
-    "while True:\n",
+    "while True:   # Loop forever\n",
     "    if i % 2 == 0:\n",
     "        print('Even:', i)\n",
     "    elif i == 9:\n",
