Reorg into sections

--- a/#Scrap.ipynb
+++ b/#Scrap.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,8 @@
       "3.8.5 (default, Sep  3 2020, 21:29:08) [MSC v.1916 64 bit (AMD64)]\n",
       "sys.version_info(major=3, minor=8, micro=5, releaselevel='final', serial=0)\n",
       "C:\\Miniconda3\n",
-      "C:\\Miniconda3\\python.exe\n"
+      "C:\\Miniconda3\\python.exe\n",
+      "33852\n"
      ]
     }
    ],
@@ -77,15 +78,10 @@
     "print(sys.version)\n",
     "print(sys.version_info)\n",
     "print(sys.prefix)\n",
-    "print(sys.executable)\n"
+    "print(sys.executable)\n",
+    "import os\n",
+    "print(os.getpid()) # Get the current process id"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
